[metadata]
name = web3-collections
version = 0.0.1
author = MiKO
author_email = mikoronjoo@gmail.com
description = Alternatives to some of the web3's classes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MiKoronjoo/web3-collections
project_urls =
    Bug Tracker = https://github.com/MiKoronjoo/web3-collections/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7.2,<4.0.0

[options.packages.find]
where = src
